--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,4 +1,5 @@
-# .github/workflows/gradle.yml
+
+     # .github/workflows/gradle.yml
 
 name: Java CI with Gradle
 
@@ -15,10 +16,13 @@ jobs:
     - name: Set up JDK
       uses: actions/setup-java@v3
       with:
-        java-version: '17'
+        java-version: '17'  # You can change this to your required Java version
 
     - name: Make gradlew executable
       run: chmod +x ./gradlew
 
     - name: Build with Gradle
       run: ./gradlew build
+
+    - name: Run the application
+      run: ./gradlew runApp
